--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock title %}
-{% block heading %} <a href="/" class="navbar-brand text-dark"><h6>Welcome To Home Page </h6></a>{% endblock heading %}
+{% block heading %} 
+<a href="/" class="navbar-brand text-dark"><h6>Welcome To Home Page </h6></a>{% endblock heading %}
 
 {% block body %}
 <div class="container my-2">
-    <img src="/static/img/office.png" height="400px" width="100%">
+    <img src="https://media3.giphy.com/media/l3mZsXph9EywxtxAs/source.gif" height="400px" width="100%">
 </div>
 <div class="container">
     <nav class="navbar bg-secondaryn">
@@ -15,6 +16,7 @@
                 <a class="btn btn-sm btn-info" type="button" href="/updateEmp">Update An Employee </a>
                 <a class="btn btn-sm btn-danger" type="button" href="/removeEmp">Remove An Employee</a>
                 <a class="btn btn-sm btn-primary" type="button" href="/filterEmp">Filter An Employee</a>
+                <a class="btn btn-sm btn-primary" type="button" href="/feedback">Feedback An Employee</a>
             </div>
         </form>
       </nav>
