--- a/templates/viewEmp.html
+++ b/templates/viewEmp.html
@@ -43,6 +43,9 @@
         </tr>  
       </tbody>  
       {% endfor %}
-    </table>          
+      
+    </table>
+    <a href="{% url 'home' %}" class="btn btn-dark">Back</a>
+          
 </div>
 {% endblock body%}
