--- a/templates/addEmp.html
+++ b/templates/addEmp.html
@@ -3,7 +3,7 @@
 {% block heading %} <a href="/addEmp" class="navbar-brand text-success"><h6>Add An Employee</h6></a> {% endblock heading %}
 {% block body %}
 <div class="container my-2">
-    <img src="/static/img/addemp.png" height="300px" width="100%">
+    <img src="https://cdn.dribbble.com/users/798777/screenshots/3928976/dribbble_nyt.gif" height="300px" width="100%">
     <form class="m-2" action="/addEmp" method="post">
         {% csrf_token %}
         <div class="mb-1">
@@ -73,5 +73,7 @@
         </form>
       </nav>
     </div> 
-
+    <div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+        <a href="{% url 'home' %}" class="btn btn-dark">Back</a>
+    </div>
 {% endblock body%}
