--- a/templates/updateEmp.html
+++ b/templates/updateEmp.html
@@ -3,7 +3,7 @@
 {% block heading %} <a href="/updateEmp" class="navbar-brand text-info"><h6>Update An Employee</h6></a>{% endblock heading %}
 {% block body %}
 <div class="container my-2">
-    <img src="/static/img/best1.png" height="300px" width="100%">
+    <img src="https://genhq.com/wp-content/uploads/2018/05/Interaction.gif" height="300px" width="100%">
     <form class="m-2" action="/updateEmp" method="post">
         {% csrf_token %}
         <div class="mb-2">
@@ -38,4 +38,7 @@
         </form>
     </nav>
 </div> 
+<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+    <a href="{% url 'home' %}" class="btn btn-dark">Back</a>
+</div>
 {% endblock body %}
